# python_data_science_template

./: .env.template  README.md  pyproject.toml
doc/adr/: adr-000.md  adr-001.md
notebooks/: explore.ipynb
src/python/utils/: __init__.py  create_date_series.py
